<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_camera_background"
    tools:ignore="RtlHardcoded">

    <FrameLayout
        android:id="@+id/inset_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        tools:layout_height="20dp" />

    <FrameLayout
        android:id="@+id/inset_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        tools:layout_height="20dp" />

    <FrameLayout
        android:id="@+id/inset_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_above="@id/inset_bottom"
        android:layout_below="@id/inset_top"
        android:layout_alignParentLeft="true"
        tools:layout_width="20dp" />

    <FrameLayout
        android:id="@+id/inset_right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_above="@id/inset_bottom"
        android:layout_below="@id/inset_top"
        android:layout_alignParentRight="true"
        tools:layout_width="20dp" />

    <FrameLayout
        android:id="@+id/cameraFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:visibility="visible">

        <com.ivan200.photoadapter.base.CameraView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="true"
            android:visibility="visible" />

    </FrameLayout>

    <TextView
        android:id="@+id/initText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/action_layout"
        android:layout_below="@id/inset_top"
        android:layout_toLeftOf="@id/inset_right"
        android:layout_toRightOf="@id/inset_left"
        android:gravity="center"
        android:text="@string/camera_init_text"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inset_top"
        android:layout_toLeftOf="@id/inset_right"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/torch_switch"
            android:layout_width="@dimen/size_icon_bounding"
            android:layout_height="@dimen/size_icon_bounding"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/photo_torch_on_description"
            android:focusable="true"
            android:scaleType="center"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_photo_flash_off"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_fit"
            android:layout_width="@dimen/size_icon_bounding"
            android:layout_height="@dimen/size_icon_bounding"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/photo_scale_type_fit"
            android:focusable="true"
            android:scaleType="center"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_photo_fill"
            tools:visibility="visible" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/size_icon_bounding"
        android:layout_height="@dimen/size_icon_bounding"
        android:layout_below="@id/inset_top"
        android:layout_toRightOf="@id/inset_left"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/button_back"
        android:focusable="true"
        android:scaleType="center"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_back"
        tools:visibility="visible" />

    <View
        android:id="@+id/flashView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/color_camera_background"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/action_layout"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_toLeftOf="@id/inset_right"
        android:layout_toRightOf="@id/inset_left">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/select_camera_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/cameras_bg"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="2"
            tools:listitem="@layout/select_camera_cell"
            tools:orientation="horizontal"
            tools:scrollbars="horizontal"
            tools:visibility="visible" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/inset_bottom"
        android:layout_gravity="bottom"
        android:layout_toLeftOf="@id/inset_right"
        android:layout_toRightOf="@id/inset_left"
        android:background="@color/color_action_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/capture"
            android:layout_alignBottom="@id/capture"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/capture"
            android:layout_toLeftOf="@id/capture">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/switch_camera"
                android:layout_width="@dimen/size_icon_bounding"
                android:layout_height="@dimen/size_icon_bounding"
                android:layout_gravity="center"
                android:background="@drawable/bg_icon_gray"
                android:clickable="true"
                android:contentDescription="@string/photo_camera_rear_description"
                android:focusable="true"
                android:scaleType="center"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_photo_camera_rear"
                tools:visibility="visible" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/color_transparent"
            android:clickable="true"
            android:contentDescription="@string/photo_capture_description"
            android:focusable="true"
            android:paddingTop="@dimen/margin_default"
            android:paddingBottom="@dimen/margin_default"
            app:srcCompat="@drawable/ic_photo_take_picture" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/capture"
            android:layout_alignBottom="@id/capture"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/capture"
            android:layout_toRightOf="@id/capture"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/result"
                android:layout_width="@dimen/size_icon_bounding"
                android:layout_height="@dimen/size_icon_bounding"
                android:layout_gravity="center"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/photo_result"
                android:focusable="true"
                android:scaleType="fitCenter"
                android:visibility="gone"
                tools:visibility="visible" />

        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>

